# GSub

./: .gitignore  .travis.yml  AUTHORS.in  COPYING  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  eu.depau.GSub.json  gsub.doap  gsub.in
data/: AboutDialog.ui.in  AlbumWidget.ui  Makefile.am  NoMusic.ui  PlayerToolbar.ui  SelectionToolbar.ui  app-menu.ui  eu.depau.GSub.desktop.in  eu.depau.GSub.gschema.xml  gsub.1  gsub.appdata.xml.in  gsub.gresource.xml  headerbar.ui  help-overlay.ui
help/: Makefile.am
help/C/: index.page
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/ko/: ko.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/sv/: sv.po
po/: POTFILES.in  POTFILES.skip  af.po  an.po  ar.po  as.po  be.po  bg.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  kn.po  ko.po  lt.po  lv.po  ml.po  (+23 more)
pygsub/: Makefile.am  Makefile.in  __init__.py  albumartcache.py  application.py  grilo.py  mpris.py  notification.py  player.py  playlists.py  query.py  searchbar.py  toolbar.py  utils.py  window.py
pygsub/views/: Makefile.am  Makefile.in  albumsview.py  artistsview.py  baseview.py  emptysearchview.py  emptyview.py  initialstateview.py  playlistview.py  searchview.py  songsview.py
pygsub/widgets/: Makefile.am  Makefile.in  albumwidget.py  artistalbumswidget.py  artistalbumwidget.py  disclistboxwidget.py  playlistdialog.py  starhandlerwidget.py
